// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchScopes empty 1`] = `
<div
  className="search-scopes__edit"
>
  <a
    aria-current={null}
    className="search-scopes__add-edit"
    href="/settings"
    onClick={[Function]}
  >
    <small
      className="search-scopes__center"
    >
      <span
        className="search-scopes__add-scopes"
      >
        Add search scopes for quick filtering
      </span>
    </small>
  </a>
</div>
`;

exports[`SearchScopes with scopes 1`] = `
Array [
  <button
    className="btn btn-sm text-nowrap filter-chip ga-filter-chip"
    data-testid="filter-chip"
    onClick={[Function]}
    onMouseDown={[Function]}
    title="v"
    type="button"
    value="v"
  >
    <div>
      n
    </div>
  </button>,
  <div
    className="search-scopes__edit"
  >
    <a
      aria-current={null}
      className="search-scopes__add-edit"
      href="/settings"
      onClick={[Function]}
    >
      <small
        className="search-scopes__center"
      >
        Edit
      </small>
    </a>
  </div>,
]
`;
